--- a/README
+++ b/README
@@ -36,6 +36,13 @@ You can also look for information at:
         http://search.cpan.org/dist/Data-DPath
 
 
+REPOSITORY
+
+The public repository is hosted on github:
+
+  git clone git://github.com/renormalist/data-dpath.git
+
+
 COPYRIGHT AND LICENCE
 
 Copyright (C) 2008 Steffen Schwigon
