--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,9 @@
 2008-11-26  Steffen Schwigon  <ss5@renormalist.net>
 
-	* 0.01
+	* v0.01
 
-	* initial version
+	* initial CPAN version
 
 	* basic paths, parents, placeholders
-
-	* Moose'ified fun
 
 
