--- a/README
+++ b/README
@@ -78,7 +78,7 @@ REPOSITORY
 
 ACKNOWLEDGEMENTS
 COPYRIGHT & LICENSE
-    Copyright 2008 Steffen Schwigon, all rights reserved.
+    Copyright 2008 Steffen Schwigon.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
