--- a/README
+++ b/README
@@ -10,11 +10,13 @@ SYNOPSIS
                              },
                     };
         @resultlist = dpath('/AAA/BBB/CCC')->match($data);
-        ( ['XXX', 'YYY', 'ZZZ'] )
-        @resultlist = dpath('/AAA/*/CCC')->match($data);
+        # ( ['XXX', 'YYY', 'ZZZ'] )
+        
+    @resultlist = dpath('/AAA/*/CCC')->match($data);
         # ( ['XXX', 'YYY', 'ZZZ'], [ 'RR1', 'RR2', 'RR3' ] )
-        @resultlist = dpath('/AAA/BBB/CCC/../../DDD')->match($data);
-        ( { EEE => [ qw/ uuu vvv www / ] } )
+        
+    @resultlist = dpath('/AAA/BBB/CCC/../../DDD')->match($data);
+        # ( { EEE => [ qw/ uuu vvv www / ] } )
 
     See currently working paths in t/data_dpath.t.
 
@@ -27,8 +29,8 @@ INSTALLATION
 FUNCTIONS
   dpath
     Meant as the front end function for everyday use of Data::DPath. It
-    takes a path string and returns a Data::DPath::Path object for which
-    smart matching ("~~") is overloaded. See SYNOPSIS.
+    takes a path string and returns a Data::DPath::Path object on which the
+    match method can be called with data structures. See SYNOPSIS.
 
 METHODS
   match($data, $path)
