--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-02-11  Steffen Schwigon  <ss5@renormalist.net>
+
+	* v0.06
+
+	* "package" statements to help the CPAN indexer.
+
 2009-02-10  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.05
