--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-02-11  Steffen Schwigon  <ss5@renormalist.net>
 
+	* v0.08
+
+	* Fix missing dependency to Test::Deep. Thanks, CPAN testers.
+
 	* v0.07
 
 	* use Scalar::Util::reftype instead of ref. This enables blessed
