--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-13  Steffen Schwigon  <steffen.schwigon@amd.com>
+
+	* fix forgotten "use" for standalone using of ::Path
+
 2009-02-12  Steffen Schwigon  <ss5@renormalist.net>
 
 	* Quoted special chars ("*", "//", "..") now work as keys
