--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,13 @@
-2009-03-01  Steffen Schwigon  <ss5@renormalist.net>
+2009-04-16  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.10
 
 	* fix forgotten "use" for standalone using of ::Path
+
+	* new path step: nostep "." (for filter chaining and on difficult
+	elements, like root node)
+
+	* documentation improvements
 
 2009-02-12  Steffen Schwigon  <ss5@renormalist.net>
 
