- raised dependencies to current MooseX level

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-05-15  Steffen Schwigon  <ss5@renormalist.net>
+
+	* v0.11
+
+	* Dependencies raised to current MooseX stuff
+
 2009-04-16  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.10
