changelog for 0.12 with "dpathr"

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-06-26  Steffen Schwigon  <ss5@renormalist.net>
+
+	* v0.12
+
+	* allow returning references into original data structure via new
+	frontend function "dpathr" instead of "dpath"
+
 2009-05-15  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.11
