--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-07-08  Steffen Schwigon  <ss5@renormalist.net>
+
+	* FORK ----- Data::DPath::Fast ----- based on b166d1daa41a3e20cc05d55a0aabc7b30b55ce1f
+
 2009-06-26  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.12
