--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-07-14  Steffen Schwigon  <ss5@renormalist.net>
+
+	* v0.13
+
+	* comparison matrix Data::DPath vs. Data::Path, requested in
+	RT#47540, http://rt.cpan.org/Public/Bug/Display.html?id=47540
+
 2009-06-26  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.12
