--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-07-14  Steffen Schwigon  <ss5@ss5-netbook>
+
+	* v0.14
+
+	* The overloaded smart match "~~" does not work commutative
+	anymore. That aligns with Perl 5.10.1+ changes.
+
 2009-07-14  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.13
