add missing ChangeLog for 0.34

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-03-27  Steffen Schwigon  <ss5@vinyl.webit.de>
+
+	* v0.34
+
+	* solve some CPAN testing issues
+
 2010-03-24  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.33
