fix stupid perl version checking in tests
Using BEGIN blocks does not work in aggregated tests, anyway
at least it doesn't stupidly break CPAN tests...

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-04-07  Steffen Schwigon  <ss5@renormalist.net>
+
+	* v0.35
+
+	* Bummer! Fixed stupid perl version checking in tests.
+
 2010-03-24  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.33
@@ -10,7 +16,6 @@
 	* documentation maintenance
 	- comparison with Data::Path reworked
 	- more verbose array semantics described
-	- 
 
 2009-09-25  Steffen Schwigon  <ss5@renormalist.net>
 
