--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2010-07-13  Steffen Schwigon  <ss5@renormalist.net>
+
+	* v0.40
+
+	* Incompatible API changes!
+
+	* Cleanup iterator style API and document it. It now consists of:
+	- dpathi()    ... initialize iterator
+	- isearch()   ... incremental search
+	- deref()     ... get actual value
+	- ref()       ... get reference to actual value
+
+	* Several methods now internal (prefixed with underscore) to make
+	the public API more clear.
+
+	* Make accessing internal point attributes ("attrs") a public API
+
 2010-07-10  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.37
