changelog with Safe.pm changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2010-10-01  Steffen Schwigon  <ss5@renormalist.net>
+
+	* v0.41
+
+	* Incompatible changes:
+	- restrict filter expression syntax with Safe.pm
+	- set local $Data::DPath::USE_STRICT = 0 to enable old eval again
+
+	* Refactoring to later hopefully easier parallelization, currently
+	slightly slower
+
 2010-07-13  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.40
