--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-04  Steffen Schwigon  <ss5@renormalist.net>
+
+	* v0.42
+	- dependency to Safe.pm raised
+
 2010-10-01  Steffen Schwigon  <ss5@renormalist.net>
 
 	* v0.41
