--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - micro optimization: _any() saves a dereference
 
 0.49      2012-12-05
   - Bummer! Uploaded 0.48 as wrong user - too many identities...
